stub out the group member and music person items

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -88,6 +88,10 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-chat.c	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-chat.h	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-member.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-member.h	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music-person.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music-person.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-post.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-post.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-chat-preview.c	\
