--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -39,35 +39,88 @@ $(CANVAS_MARSHAL_BODY): $(CANVAS_MARSHAL_LIST)
 	mkdir $(MARSHAL_DIR) || true
 	(echo "#include \"hippo-canvas-marshal.h\""; $(GLIB_GENMARSHAL) --prefix=hippo_canvas_marshal $(CANVAS_MARSHAL_LIST) --body) > $(CANVAS_MARSHAL_BODY)
 
+CANVAS_ENUMS_HEADER=$(ENUMS_DIR)/hippo-canvas-type-builtins.h
+CANVAS_ENUMS_BODY=$(ENUMS_DIR)/hippo-canvas-type-builtins.c
+CANVAS_ENUMS_HEADER_STAMP=$(ENUMS_DIR)/stamp-hippo-canvas-type-builtins.h
+CANVAS_ENUMS_BODY_STAMP=$(ENUMS_DIR)/stamp-hippo-canvas-type-builtins.c
 
-CANVAS_SOURCEFILES = 						\
-	$(CANVASSRCDIR)/hippo/hippo-canvas-box.c		\
+$(CANVAS_ENUMS_BODY): $(CANVAS_ENUMS_BODY_STAMP)
+	@true
+$(CANVAS_ENUMS_BODY_STAMP): $(CANVAS_HEADERFILES)
+	(cd $(CANVASSRCDIR) && $(GLIB_MKENUMS) \
+		--fhead "#include \"hippo-canvas-type-builtins.h\"\n\n" \
+		--fprod "\n/* enumerations from \"@filename@\" */" \
+		--fprod "\n#include \"@filename@\"" \
+		--vhead "const G@Type@Value _@enum_name@_values[] = {" \
+		--vprod "  { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
+		--vtail "  { 0, NULL, NULL }\n};\n\n" \
+		--vtail "GType\n@enum_name@_get_type (void)\n{\n" \
+		--vtail "  static GType type = 0;\n\n" \
+		--vtail "  if (G_UNLIKELY (type == 0))\n" \
+		--vtail "    type = g_@type@_register_static (\"@EnumName@\", _@enum_name@_values);\n\n" \
+		--vtail "  return type;\n}\n\n" \
+		$(^F:%=hippo/%)) > xgen-$(@F) \
+	&& ( cmp -s xgen-$(@F) $(CANVAS_ENUMS_BODY) || cp xgen-$(@F) $(CANVAS_ENUMS_BODY)) \
+	&& rm -f xgen-$(@F) \
+	&& echo timestamp > $(CANVAS_ENUMS_BODY_STAMP)
+
+$(CANVAS_ENUMS_HEADER): $(CANVAS_ENUMS_HEADER_STAMP)
+	@true
+$(CANVAS_ENUMS_HEADER_STAMP): $(CANVAS_HEADERFILES)
+	(cd $(CANVASSRCDIR) && $(GLIB_MKENUMS) \
+		--fhead "#ifndef HIPPO_CANVAS_TYPE_BUILTINS_H\n" \
+		--fhead "#define HIPPO_CANVAS_TYPE_BUILTINS_H 1\n\n" \
+		--fhead "#include <glib-object.h>\n\n" \
+		--fhead "G_BEGIN_DECLS\n\n" \
+		--ftail "G_END_DECLS\n\n" \
+		--ftail "#endif /* HIPPO_CANVAS_TYPE_BUILTINS_H */\n" \
+		--fprod "\n/* --- @filename@ --- */" \
+		--eprod "#define HIPPO_TYPE_@ENUMSHORT@ @enum_name@_get_type()\n" \
+		--eprod "GType @enum_name@_get_type (void);\n" \
+		$(^F:%=hippo/%)) > xgen-$(@F) \
+	&& ( cmp -s xgen-$(@F) $(CANVAS_ENUMS_HEADER) || cp xgen-$(@F) $(CANVAS_ENUMS_HEADER)) \
+	&& rm -f xgen-$(@F) \
+	&& echo timestamp > $(CANVAS_ENUMS_HEADER_STAMP)
+
+CANVAS_ENUMS_STAMPS =			\
+	$(CANVAS_ENUMS_BODY_STAMP)	\
+	$(CANVAS_ENUMS_HEADER_STAMP)
+
+CANVAS_HEADERFILES = 						\
+	$(CANVAS_MARSHAL_HEADER)				\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-box.h		\
-	$(CANVASSRCDIR)/hippo/hippo-canvas-context.c		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-context.h		\
-	$(CANVASSRCDIR)/hippo/hippo-canvas-gradient.c		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-gradient.h		\
-	$(CANVASSRCDIR)/hippo/hippo-canvas-image.c		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-image.h		\
-	$(CANVASSRCDIR)/hippo/hippo-canvas-image-button.c	\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-image-button.h	\
-	$(CANVASSRCDIR)/hippo/hippo-canvas-item.c		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-item.h		\
-	$(CANVASSRCDIR)/hippo/hippo-canvas-link.c		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-link.h		\
-	$(CANVASSRCDIR)/hippo/hippo-canvas-test.c		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-test.h		\
-	$(CANVASSRCDIR)/hippo/hippo-canvas-text.c		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-text.h		\
 	$(CANVASSRCDIR)/hippo/hippo-canvas-widgets.h		\
-	$(CANVASSRCDIR)/hippo/hippo-event.c			\
 	$(CANVASSRCDIR)/hippo/hippo-event.h			\
-	$(CANVASSRCDIR)/hippo/hippo-graphics.c			\
-	$(CANVASSRCDIR)/hippo/hippo-grahics.h
+	$(CANVASSRCDIR)/hippo/hippo-graphics.h
+
+CANVAS_SOURCEFILES = 						\
+	$(CANVAS_HEADERFILES)					\
+	$(CANVAS_MARSHAL_BODY)					\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-box.c		\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-context.c		\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-gradient.c		\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-image.c		\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-image-button.c	\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-item.c		\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-link.c		\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-test.c		\
+	$(CANVASSRCDIR)/hippo/hippo-canvas-text.c		\
+	$(CANVASSRCDIR)/hippo/hippo-event.c			\
+	$(CANVASSRCDIR)/hippo/hippo-graphics.c
 
 CANVAS_BUILT_SOURCEFILES =			\
 	$(CANVAS_MARSHAL_HEADER)		\
-	$(CANVAS_MARSHAL_BODY)
+        $(CANVAS_MARSHAL_BODY)			\
+	$(CANVAS_ENUMS_HEADER)                  \
+	$(CANVAS_ENUMS_BODY)
 
 LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-actions.c			\
@@ -155,7 +208,7 @@ LIBHIPPO_BUILT_SOURCEFILES =			\
 	$(COMMON_MARSHAL_HEADER)		\
 	$(COMMON_MARSHAL_BODY)
 
-MAINTAINERCLEANFILES +=	$(LIBHIPPO_BUILT_SOURCEFILES) $(CANVAS_BUILT_SOURCEFILES)
+MAINTAINERCLEANFILES +=	$(LIBHIPPO_BUILT_SOURCEFILES) $(CANVAS_BUILT_SOURCEFILES) $(CANVAS_ENUMS_STAMPS)
 BUILT_SOURCES += $(LIBHIPPO_BUILT_SOURCEFILES) $(CANVAS_BUILT_SOURCEFILES)
 
 ## we need to nodist these because otherwise automake would copy 
