Make the base bar different for the browser and notification windows. Hook up the buttons

--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -45,6 +45,8 @@ mugshot_SOURCES	=				\
 
 EMBEDDEDIMAGEDIR=$(COMMONSRCDIR)/images
 EMBEDDED_IMAGES=				\
+	$(EMBEDDEDIMAGEDIR)/arrow.png		\
+	$(EMBEDDEDIMAGEDIR)/arrow2.png		\
 	$(EMBEDDEDIMAGEDIR)/bar_middle.png	\
 	$(EMBEDDEDIMAGEDIR)/bar_pipe.png	\
 	$(EMBEDDEDIMAGEDIR)/bar_x2.png		\
