--- a/dumbhippo/trunk/client/windows/Applets/Makefile
+++ b/dumbhippo/trunk/client/windows/Applets/Makefile
@@ -37,6 +37,8 @@ all: *.xml *.css *.png *.js *.gif images
 IMGDIR=..\..\common\images
 images:
 	-mkdir $(OUTDIR)\images
+	copy $(IMGDIR)\arrow.png $(OUTDIR)\images
+	copy $(IMGDIR)\arrow2.png $(OUTDIR)\images
 	copy $(IMGDIR)\bar_middle.png $(OUTDIR)\images
 	copy $(IMGDIR)\bar_pipe.png $(OUTDIR)\images
 	copy $(IMGDIR)\bar_x2.png $(OUTDIR)\images
