- implement the group member block - comment out Add to Faves for now since it doesn't do anything

--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -45,6 +45,7 @@ mugshot_SOURCES	=				\
 
 EMBEDDEDIMAGEDIR=$(COMMONSRCDIR)/images
 EMBEDDED_IMAGES=				\
+	$(EMBEDDEDIMAGEDIR)/add_icon.png	\
 	$(EMBEDDEDIMAGEDIR)/arrow.png		\
 	$(EMBEDDEDIMAGEDIR)/arrow2.png		\
 	$(EMBEDDEDIMAGEDIR)/bar_middle.png	\
