hippo-canvas.c hippo-canvas-helper.[ch]: Split hippo-canvas into   the widget and a helper object that does all the work. hippo-canvas-window.[ch] hippo-canvas-window-child.[ch]: Use   hippo-canvas-helper to create a GtkWindow subclass that   draws the canvas directly onto the toplevel window.
hippo-window-gtk.c: Get jump-free stacking at the top
  - Use HippoCanvasWindow
  - Set static bit gravity on the window
  - Hack exposes so we don't redraw while resizing
  - Make the window background none when it's a notificatin window

hippo-stack-manager.c: Fix a warning.

--- a/dumbhippo/trunk/client/canvas/Makefile.am
+++ b/dumbhippo/trunk/client/canvas/Makefile.am
@@ -129,6 +129,7 @@ COMMON_CANVAS_HEADERFILES = 					\
 
 LINUX_CANVAS_HEADERFILES =					\
 	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas.h		\
+	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-window.h	\
 	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-widget.h
 
 COMMON_CANVAS_SOURCEFILES = 					\
@@ -150,6 +151,12 @@ COMMON_CANVAS_SOURCEFILES = 					\
 
 LINUX_CANVAS_SOURCEFILES =					\
 	$(LINUX_CANVAS_HEADERFILES)				\
+	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas.c		\
+	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-window.c	\
+	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-helper.c	\
+	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-helper.h	\
+	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-window-child.c	\
+	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-window-child.h	\
 	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas.c		\
 	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-widget.c	\
 	$(LINUXCANVASSRCDIR)/hippo/hippo-canvas-widgets.c
