--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -13,9 +13,15 @@ mugshot_LDADD= libhippoipc.la libhippo.la libgtkcopy.la
 mugshot_SOURCES	=				\
 	canvas/hippo/hippo-canvas.c		\
 	canvas/hippo/hippo-canvas.h		\
+	canvas/hippo/hippo-canvas-helper.c	\
+	canvas/hippo/hippo-canvas-helper.h	\
 	canvas/hippo/hippo-canvas-widget.c	\
 	canvas/hippo/hippo-canvas-widget.h	\
 	canvas/hippo/hippo-canvas-widgets.c	\
+	canvas/hippo/hippo-canvas-window.c	\
+	canvas/hippo/hippo-canvas-window.h	\
+	canvas/hippo/hippo-canvas-window-child.c\
+	canvas/hippo/hippo-canvas-window-child.h\
 	src/hippo-chat-window.c		    	\
 	src/hippo-chat-window.h		    	\
 	src/hippo-cookies-linux.c		\
