Make the default value of multicastAddress something invalid

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -63,10 +63,12 @@
 
     <parameter name="clusterHosts"></parameter>
 	<parameter name="bindHost">127.0.0.1</parameter>
-	<!-- Multicast group for this cluster. 228.1.2.3 corresponds to the JBoss default,
-         but if you are picking one for yourself, AFAIK you should pick from
-         239.255.x.y, which is the "IPv4 Local Scope" -->
-	<parameter name="multicastAddress">228.1.2.3</parameter>
+
+	<!-- No default value for this, because bad things happen if you have 
+         the same value as someone else on your local network. You should
+         pick from 239.255.x.y, which is the "IPv4 Local Scope" -->
+	<parameter name="multicastAddress">replace.with.multicast.address.example.com</parameter>
+
 	<!-- Number of hops to keep outgoing packets alive for. 1 would be enough normally for a LAN -->
 	<parameter name="multicastTTL">2</parameter>
 
