hippo-canvas-message-preview.[ch] hippo-canvas-block-preview.[ch]:    Split message preview item out of block item.
hippo-canvas-block-post.c hippo-canvas-block-group-chat.c:
   Show a single line of chat in unexpanded mode if there is chat
   (replace the single line of description for post blocks)

hippo-canvas-block.c: Set ->expanded before calling to the subclass
   to expand/unexpand as a convenience for the subclass.

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -186,6 +186,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-entity-photo.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-grip.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-grip.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-message-preview.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-message-preview.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.h		\
 	$(COMMONSRCDIR)/hippo/hippo-chat-room.c			\
