--- a/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
@@ -182,6 +182,9 @@
 				RelativePath=".\hippo-canvas-marshal.c">
 			</File>
 			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-message-preview.c">
+			</File>
+			<File
 				RelativePath="..\..\common\hippo\hippo-canvas-stack.c">
 			</File>
 			<File
@@ -346,6 +349,9 @@
 			</File>
 			<File
 				RelativePath=".\hippo-canvas-marshal.h">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-canvas-message-preview.h">
 			</File>
 			<File
 				RelativePath="..\..\common\hippo\hippo-canvas-stack.h">
