Use new notification icons; use Mugshot icon for window icons rather than link swarm icon. (Windows part of #841)

--- a/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
@@ -382,6 +382,12 @@
 				RelativePath=".\Mugshot.ico">
 			</File>
 			<File
+				RelativePath=".\notification.ico">
+			</File>
+			<File
+				RelativePath=".\notification_disconnected.ico">
+			</File>
+			<File
 				RelativePath=".\swarm1.ico">
 			</File>
 			<File
