- add HippoToolTip wrapper around tooltip common control - use HippoToolTip in HippoCanvas to show tips - add selfSizing flag to HippoAbstractWindow which means "just don't worry about the size of this window" roughly - tooltip sizes itself and we can't track its size easily - have HippoAbstractControl objects inherit the HippoUI from their parent - ignore duplicate mouse move events in HippoCanvas

--- a/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoUI/HippoUI.vcproj
@@ -204,6 +204,9 @@
 				RelativePath=".\HippoToolbarEdit.cpp">
 			</File>
 			<File
+				RelativePath=".\HippoToolTip.cpp">
+			</File>
+			<File
 				RelativePath=".\HippoUI.cpp">
 			</File>
 			<File
@@ -318,6 +321,9 @@
 			</File>
 			<File
 				RelativePath=".\HippoToolbarEdit.h">
+			</File>
+			<File
+				RelativePath=".\HippoToolTip.h">
 			</File>
 			<File
 				RelativePath=".\HippoUI.h">
