--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -110,11 +110,11 @@
          old version can still run  -->
 	<parameter name="clientLinuxCurrent">1.1.22</parameter>
 	<!-- Download URL for the client -->
-	<parameter name="clientFedora5Download">http://devel.mugshot.org/download/fedora-core-5/mugshot-1.1.22-1.fc5.i386.rpm</parameter>
-	<parameter name="clientFedora5DownloadSRPM">http://devel.mugshot.org/download/sources/linux/mugshot-1.1.22-1.fc5.src.rpm</parameter>
-	<parameter name="clientFedora6Download">http://devel.mugshot.org/download/fedora-core-5/mugshot-1.1.22-1.fc6.i386.rpm</parameter>
-	<parameter name="clientFedora6DownloadSRPM">http://devel.mugshot.org/download/sources/linux/mugshot-1.1.22-1.fc6.src.rpm</parameter>		
-	<parameter name="clientLinuxDownloadTar">http://devel.mugshot.org/download/sources/linux/mugshot-1.1.22.tar.gz</parameter>
+	<parameter name="clientFedora5Download">http://developer.mugshot.org/download/fedora-core-5/mugshot-1.1.22-1.fc5.i386.rpm</parameter>
+	<parameter name="clientFedora5DownloadSRPM">http://developer.mugshot.org/download/sources/fedora-core-5/mugshot-1.1.22-1.fc5.src.rpm</parameter>
+	<parameter name="clientFedora6Download">http://developer.mugshot.org/download/fedora-core-6/mugshot-1.1.22-1.fc6.i386.rpm</parameter>
+	<parameter name="clientFedora6DownloadSRPM">http://developer.mugshot.org/download/sources/fedora-core-6/mugshot-1.1.22-1.fc6.src.rpm</parameter>		
+	<parameter name="clientLinuxDownloadTar">http://developer.mugshot.org/download/sources/linux/mugshot-1.1.22.tar.gz</parameter>
 
 	<parameter name="mailHost">127.0.0.1</parameter>
 	<parameter name="mailPort">25</parameter>
