Fixes for #892, not yet very tested
LockService LockServiceMBean super/base.conf dumbhippo-service.xml: Add
  a per-server singleton LockService object that wraps 
  org.jgroups.blocks.DistributedLockManager
  
CacheTaskExecutor: Subclass of UniqueTaskExecutor that locks cluster-wide
  before executing the task
AbstractCacheBean: use CacheTaskExecutor

<Nonabstract>CacheBean: When running the fetch task, check again for the
 data before going to the web in case some other node got in and got
 the lock first.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -224,6 +224,7 @@
         <parameter name="uil2MQPort">$((baseport+54))</parameter>
 	    <parameter name="entityCacheMcastPort">$((baseport+55))</parameter>
 	    <parameter name="clusterServiceMcastPort">$((baseport+56))</parameter>
+	    <parameter name="lockServiceMcastPort">$((baseport+57))</parameter>
 
 		<!-- How often to run the pass through all LiveUser objects and update their
              hotness, live posts, and so forth, in seconds -->
