--- a/dumbhippo/trunk/cluster/build.xml
+++ b/dumbhippo/trunk/cluster/build.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="cluster">
-        <property name="hippo.server.path" value="${basedir}/../server"/>
+        <import file="${basedir}/../common.xml"/>
+
 	<property name="target" value="target" />
         <property name="target.lib" value="${target}/lib" />
 	<property name="build" value="${target}/classes" />
 	<property name="src" value="balancer/src" />
-        <fileset dir="${hippo.server.path}" id="dependency.jars.server">
-                <include name="target/classes/dumbhippo-client.jar"/>
-                <include name="lib/slf4j-*.jar"/>
+        <fileset dir="${dumbhippo.global.trunkdir}" id="dependency.jars.server">
+                <include name="server/target/classes/dumbhippo-client.jar"/>
+                <include name="lib/server/slf4j-*.jar"/>
         </fileset>
     <path id="project.classpath">
         <pathelement location="${build}"/>
