--- a/dumbhippo/trunk/taste/build.xml
+++ b/dumbhippo/trunk/taste/build.xml
@@ -5,11 +5,20 @@
 	<description>Taste recommendation engine build script</description>
 
 	<property file="build.properties"/>
+
 	<property name="name" value="${ant.project.name}"/>
 	<property name="release-jar" value="${name}.jar"/>
 	<property name="release-ejb-jar" value="${name}-ejb.jar"/>
 	<property name="release-war" value="${name}.war"/>
 	<property name="release-zip" value="${name}-${version}.zip"/>
+
+        <import file="${basedir}/../common.xml"/>
+        <property name="junit.jar" value="${dumbhippo.global.lib}/taste/junit.jar"/>        
+        <property name="ejb.jar" value="${dumbhippo.global.lib}/taste/ejb-2_1-api.jar"/>        
+        <property name="servlet.jar" value="${dumbhippo.global.lib}/taste/servlet-api.jar"/>        
+        <property name="mysql.jar" value="${dumbhippo.global.lib}/taste/mysql-connector-java-3.1.11-bin.jar"/>        
+        <property name="annotations.jar" value="${dumbhippo.global.lib}/taste/annotations.jar"/>
+
 
 	<target name="init">
 		<tstamp/>
@@ -88,7 +97,7 @@
 				<include name="${release-jar}"/>
 				<include name="${my-recommender.jar}"/>
 			</lib>
-			<lib dir="lib/axis"/>
+			<lib dir="${dumbhippo.global.lib}/taste/axis"/>
 			<classes dir="build">
 				<include name="com/planetj/taste/web/**"/>
 			</classes>
@@ -195,7 +204,7 @@
 			<exclude name="src/example/com/planetj/taste/example/grouplens/*.dat"/>
 			<exclude name="src/enterprise/**"/>
 			<include name="docs/**"/>
-			<include name="lib/**"/>
+			<include name="${dumbhippo.global.lib}/taste/**"/>
 			<include name="build.xml"/>
 			<include name="build.properties"/>
 			<include name="CHANGES.txt"/>
